//////////////////////////////////////////////////
// ALUNO
//////////////////////////////////////////////////

Table Aluno {
  id uuid [pk]
  nome varchar [not null]
  cpf varchar(11) [unique, not null]
  email varchar [unique, not null]
}

//////////////////////////////////////////////////
// DISCIPLINA
//////////////////////////////////////////////////

Table Disciplina {
  id uuid [pk]
  nome varchar [not null]
  carga_horaria int [not null]
}

//////////////////////////////////////////////////
// FUNCIONARIO / PROFESSOR (HERANÇA)
//////////////////////////////////////////////////

Table Funcionario {
  id uuid [pk]
  nome varchar [not null]
  salario decimal(10,2) [not null]
}

Table Professor {
  id uuid [pk]
  funcionario_id uuid [unique, not null, ref: > Funcionario.id]
  especialidade varchar
}

//////////////////////////////////////////////////
// DOMÍNIOS
//////////////////////////////////////////////////

Table StatusMatricula {
  id int [pk]
  nome varchar [unique, not null]
}

Table StatusMensalidade {
  id int [pk]
  nome varchar [unique, not null]
}

Table Turno {
  id int [pk]
  nome varchar [unique, not null]
}

//////////////////////////////////////////////////
// TURMA
//////////////////////////////////////////////////


Table Turma {
  id uuid [pk]
  disciplina_id uuid [not null, ref: > Disciplina.id]
  ano int [not null]
  semestre int [not null]
  turno_id int [not null, ref: > Turno.id]

  indexes {
    (disciplina_id, ano, semestre, turno_id) [unique]
  }
}

//////////////////////////////////////////////////
// PROFESSOR ↔ TURMA (N:N)
//////////////////////////////////////////////////

Table ProfessorTurma {
  id uuid [pk]
  professor_id uuid [not null, ref: > Professor.id]
  turma_id uuid [not null, ref: > Turma.id]

  indexes {
    (professor_id, turma_id) [unique]
  }
}

//////////////////////////////////////////////////
// MATRÍCULA
//////////////////////////////////////////////////

Table Matricula {
  id uuid [pk]
  aluno_id uuid [not null, ref: > Aluno.id]
  turma_id uuid [not null, ref: > Turma.id]
  data_matricula date [not null]
  status_id int [not null, ref: > StatusMatricula.id]

  indexes {
    (aluno_id, turma_id) [unique]
  }
}


//////////////////////////////////////////////////
// CONTRATO (1:1)
//////////////////////////////////////////////////

Table Contrato {
  id uuid [pk]
  matricula_id uuid [not null, unique, ref: > Matricula.id]
  data_inicio date [not null]
  valor_total decimal(10,2) [not null]
}


//////////////////////////////////////////////////
// MENSALIDADE
//////////////////////////////////////////////////

Table Mensalidade {
  id uuid [pk]
  contrato_id uuid [not null, ref: > Contrato.id]
  valor decimal(10,2) [not null]
  data_vencimento date [not null]
  status_id int [not null, ref: > StatusMensalidade.id]

  indexes {
    (contrato_id, data_vencimento) [unique]
  }
}